package erwan;

public interface Branchement{}
