@startuml mati-sprint2-classes
!pragma layout smetana
skinparam classAttributeIconSize 0
skinparam classFontSize 11
skinparam defaultFontName Sans
skinparam linetype ortho
hide empty members

package "erwan (interface interpretation/simulation)" {
  interface Branchement
  class Erwan {
    -nom: String
    -entrees: List<Erwan>
    -op: Operation
  }
  class AppelModule
  enum Operation {
    ET
    OU
    NON
    XOR
    IDENTITE
    CONSTANTE
  }
  class Descripteur {
    -Nom: String
    -indiceDebut: int
    -indiceFin: int
  }
  class Module {
    +Plan: List<Erwan>
    +Entrees: List<Descripteur>
    +Sorties: List<Descripteur>
    +Branchements: List<AppelModule>
  }
}

package "simulateur (couche execution)" {
  class Constante
  class ConnecteurListener
  class FileSimulateur
  class Experience
}

Branchement <|.. Erwan
Branchement <|.. AppelModule
Erwan o-- "*" Erwan : sous-signaux
Erwan --> Operation
Module *-- "*" Erwan
Module *-- "*" Descripteur
Module *-- "*" AppelModule

FileSimulateur ..> Module : consomme

@enduml
